global: fix for mobile devices
* Removes vertical scrollbar on homepage.

* Fixes menu overlapping on homepage.

--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -74,7 +74,7 @@ html,body{
     font-weight: 500;
 }
 .vertical-center {
-  height: 75%;
+  height: 600px;
   display: flex;
   align-items: center;
 }
@@ -126,9 +126,6 @@ html,body{
   }
 }
 .intro-section {
-    min-height: 600px;
-    max-height: 800px;
-    height: 80%;
     width: 100%;
     position: relative;
     background-image: url("/static/img/library.jpg");
@@ -138,6 +135,21 @@ html,body{
     color: rgba(255, 255, 255, 0.6);
     font-weight: 300;
     font-size: 14px;
+}
+@media only screen and (max-device-width: 768px) {
+  .vertical-center {
+    height: auto!important;
+  }
+  .intro-section .cover-image {
+    min-height: auto!important;
+    padding-bottom: 50px;
+  }
+  .intro-section {
+    height: auto!important;
+  }
+}
+.intro-section .cover-image {
+  min-height: 800px;
 }
 .cover-image {
     background-color: rgba(13,95,137,0.8);
@@ -268,6 +280,7 @@ html,body{
 }
 .features-section img {
     max-height: 60px;
+    max-width: 100%;
 }
 .features-section-row  {
     padding-bottom: 30px;
@@ -335,7 +348,6 @@ footer nav li.title {
 
 /* base.html */
 .header-section {
-    min-height: 300px;
     width: 100%;
     position: relative;
     background-image: url("/static/img/iugw.png");
